# _ide_helper_models.php
@@ -11,10 +11,7 @@
 
 
 namespace App\Models{
-
-    use Illuminate\Database\Eloquent\Builder;
-
-    /**
+/**
  * App\Models\Appeal
  *
  * @property int $id
@@ -26,19 +23,75 @@ namespace App\Models{
  * @property string $message
  * @property int|null $user_id
  * @property-read \App\Models\User|null $user
- * @method static Builder|Appeal newModelQuery()
- * @method static Builder|Appeal newQuery()
- * @method static Builder|Appeal query()
- * @method static Builder|Appeal whereCreatedAt($value)
- * @method static Builder|Appeal whereEmail($value)
- * @method static Builder|Appeal whereId($value)
- * @method static Builder|Appeal whereMessage($value)
- * @method static Builder|Appeal whereName($value)
- * @method static Builder|Appeal wherePhone($value)
- * @method static Builder|Appeal whereUpdatedAt($value)
- * @method static Builder|Appeal whereUserId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereEmail($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereMessage($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereName($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal wherePhone($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Appeal whereUserId($value)
  */
 	class IdeHelperAppeal {}
+}
+
+namespace App\Models{
+/**
+ * App\Models\Cart
+ *
+ * @property int $id
+ * @property string|null $session_id
+ * @property int|null $user_id
+ * @property float $price_total
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property-read \Illuminate\Database\Eloquent\Collection|\App\Models\CartItem[] $items
+ * @property-read int|null $items_count
+ * @property-read \Illuminate\Database\Eloquent\Collection|\App\Models\CartItem[] $orderedItems
+ * @property-read int|null $ordered_items_count
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart wherePriceTotal($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart whereSessionId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart whereUpdatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Cart whereUserId($value)
+ */
+	class IdeHelperCart {}
+}
+
+namespace App\Models{
+/**
+ * App\Models\CartItem
+ *
+ * @property int $id
+ * @property int $cart_id
+ * @property int $product_id
+ * @property int $quantity
+ * @property float $price_total
+ * @property float $price_item
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property-read \App\Models\Cart $cart
+ * @property-read \App\Models\Product $product
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem query()
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem whereCartId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem wherePriceItem($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem wherePriceTotal($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem whereProductId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem whereQuantity($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|CartItem whereUpdatedAt($value)
+ */
+	class IdeHelperCartItem {}
 }
 
 namespace App\Models{
